import { Vehicle } from "../Vehicle";

export class LuxaryV1 implements Vehicle{
    
    average(): void {
        console.log('average of this car around 10KM');
    }

}