import { Vehicle } from "../Vehicle";

export class LuxaryV2 implements Vehicle{
    
    average(): void {
        console.log('average of this car around 8KM');
    }

}