import { Vehicle } from "../Vehicle";

export class OrdinaryV1 implements Vehicle {
    average(): void {
        console.log('average of this car around 22KM');
        
    }
}
