import { Vehicle } from "../Vehicle";

export class OrdinaryV2 implements Vehicle {

    average(): void {
        console.log('average of this car around 25KM');
        
    }
}
