export interface Vehicle {
    average():void;
}
